--- a/04_model_search.ipynb
+++ b/04_model_search.ipynb
@@ -37,6 +37,7 @@
     "uniprot_id = 'P56817'\n",
     "path_file = path(uniprot_id)\n",
     "\n",
+    "# Archivo de la carpeta TOP SOCORE\n",
     "excel_name = f'{uniprot_id}/P56817_20220611155839_top_scores_XGBClassifier_precision_rf3'\n",
     "resample_factor = int(str.split(excel_name,'_')[-1][2:])\n",
     "resample_mode = 'under_sampling'\n",
